packages/core/src/antlr/LambdaParser.ts
// @ts-nocheck
// Generated from ./src/antlr/Lambda.g4 by ANTLR 4.13.2
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import LambdaListener from "./LambdaListener.js";
import LambdaVisitor from "./LambdaVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class LambdaParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly LAMBDA = 10;
	public static readonly LAMBDA_CAPITALIZED = 11;
	public static readonly LET = 12;
	public static readonly IN = 13;
	public static readonly FIX = 14;
	public static readonly TYPEDEF = 15;
	public static readonly NIL = 16;
	public static readonly CONS = 17;
	public static readonly ISNIL = 18;
	public static readonly HEAD = 19;
	public static readonly TAIL = 20;
	public static readonly LIST = 21;
	public static readonly FOLD = 22;
	public static readonly UNFOLD = 23;
	public static readonly MU = 24;
	public static readonly KIND_STAR = 25;
	public static readonly APOSTROPHE = 26;
	public static readonly FORALL = 27;
	public static readonly PI = 28;
	public static readonly CASE = 29;
	public static readonly OF = 30;
	public static readonly INL = 31;
	public static readonly INR = 32;
	public static readonly OR = 33;
	public static readonly AS = 34;
	public static readonly IF = 35;
	public static readonly THEN = 36;
	public static readonly ELSEIF = 37;
	public static readonly ELSE = 38;
	public static readonly UNDERSCORE = 39;
	public static readonly EQEQ = 40;
	public static readonly NEQ = 41;
	public static readonly LEQ = 42;
	public static readonly GEQ = 43;
	public static readonly EQ = 44;
	public static readonly LT = 45;
	public static readonly MT = 46;
	public static readonly MUL = 47;
	public static readonly PLUS = 48;
	public static readonly MINUS = 49;
	public static readonly DIV = 50;
	public static readonly LBRACK = 51;
	public static readonly RBRACK = 52;
	public static readonly LPAREN = 53;
	public static readonly RPAREN = 54;
	public static readonly COMMA = 55;
	public static readonly ARROW = 56;
	public static readonly DOUBLEARROW = 57;
	public static readonly COLON = 58;
	public static readonly DOT = 59;
	public static readonly SEMI = 60;
	public static readonly GREEK = 61;
	public static readonly NATURAL_NUMBER = 62;
	public static readonly ZERO = 63;
	public static readonly STRING_LITERAL = 64;
	public static readonly ID = 65;
	public static readonly LINE_COMMENT = 66;
	public static readonly WS = 67;
	public static override readonly EOF = Token.EOF;
	public static readonly RULE_expression = 0;
	public static readonly RULE_globalDecl = 1;
	public static readonly RULE_term = 2;
	public static readonly RULE_type = 3;
	public static readonly RULE_typeVariable = 4;
	public static readonly RULE_constant = 5;
	public static readonly RULE_kind = 6;
	public static readonly literalNames: (string | null)[] = [ null, "'Nat'", 
                                                            "'Bool'", "'Unit'", 
                                                            "'String'", 
                                                            "'true'", "'True'", 
                                                            "'false'", "'False'", 
                                                            "'unit'", null, 
                                                            "'\\u039B'", 
                                                            "'let'", "'in'", 
                                                            "'fix'", "'typedef'", 
                                                            "'nil'", "'cons'", 
                                                            "'isnil'", "'head'", 
                                                            "'tail'", "'List'", 
                                                            "'fold'", "'unfold'", 
                                                            "'\\u03BC'", 
                                                            "'@'", "'''", 
                                                            "'\\u2200'", 
                                                            "'\\u03A0'", 
                                                            "'case'", "'of'", 
                                                            "'inl'", "'inr'", 
                                                            "'||'", "'as'", 
                                                            "'if'", "'then'", 
                                                            "'elseif'", 
                                                            "'else'", "'_'", 
                                                            "'=='", "'!='", 
                                                            "'<='", "'>='", 
                                                            "'='", "'<'", 
                                                            "'>'", null, 
                                                            "'+'", "'-'", 
                                                            "'/'", "'['", 
                                                            "']'", "'('", 
                                                            "')'", "','", 
                                                            null, null, 
                                                            "':'", "'.'", 
                                                            "';'", null, 
                                                            null, "'0'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             "LAMBDA", "LAMBDA_CAPITALIZED", 
                                                             "LET", "IN", 
                                                             "FIX", "TYPEDEF", 
                                                             "NIL", "CONS", 
                                                             "ISNIL", "HEAD", 
                                                             "TAIL", "LIST", 
                                                             "FOLD", "UNFOLD", 
                                                             "MU", "KIND_STAR", 
                                                             "APOSTROPHE", 
                                                             "FORALL", "PI", 
                                                             "CASE", "OF", 
                                                             "INL", "INR", 
                                                             "OR", "AS", 
                                                             "IF", "THEN", 
                                                             "ELSEIF", "ELSE", 
                                                             "UNDERSCORE", 
                                                             "EQEQ", "NEQ", 
                                                             "LEQ", "GEQ", 
                                                             "EQ", "LT", 
                                                             "MT", "MUL", 
                                                             "PLUS", "MINUS", 
                                                             "DIV", "LBRACK", 
                                                             "RBRACK", "LPAREN", 
                                                             "RPAREN", "COMMA", 
                                                             "ARROW", "DOUBLEARROW", 
                                                             "COLON", "DOT", 
                                                             "SEMI", "GREEK", 
                                                             "NATURAL_NUMBER", 
                                                             "ZERO", "STRING_LITERAL", 
                                                             "ID", "LINE_COMMENT", 
                                                             "WS" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"expression", "globalDecl", "term", "type", "typeVariable", "constant", 
		"kind",
	];
	public get grammarFileName(): string { return "Lambda.g4"; }
	public get literalNames(): (string | null)[] { return LambdaParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return LambdaParser.symbolicNames; }
	public get ruleNames(): string[] { return LambdaParser.ruleNames; }
	public get serializedATN(): number[] { return LambdaParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, LambdaParser._ATN, LambdaParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public expression(): ExpressionContext {
		let localctx: ExpressionContext = new ExpressionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, LambdaParser.RULE_expression);
		let _la: number;
		try {
			let _alt: number;
			localctx = new ExprContext(this, localctx);
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 17;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 0, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 14;
					this.globalDecl();
					}
					}
				}
				this.state = 19;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 0, this._ctx);
			}
			this.state = 23;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (((((_la - 3)) & ~0x1F) === 0 && ((1 << (_la - 3)) & 874245117) !== 0) || ((((_la - 35)) & ~0x1F) === 0 && ((1 << (_la - 35)) & 2013594625) !== 0)) {
				{
				this.state = 20;
				this.term(0);
				this.state = 21;
				this.match(LambdaParser.SEMI);
				}
			}

			this.state = 25;
			this.match(LambdaParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public globalDecl(): GlobalDeclContext {
		let localctx: GlobalDeclContext = new GlobalDeclContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, LambdaParser.RULE_globalDecl);
		try {
			this.state = 51;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 2, this._ctx) ) {
			case 1:
				localctx = new GlobalVariableDeclarationContext(this, localctx);
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 27;
				this.match(LambdaParser.ID);
				this.state = 28;
				this.match(LambdaParser.COLON);
				this.state = 29;
				this.type_(0);
				this.state = 30;
				this.match(LambdaParser.SEMI);
				}
				break;
			case 2:
				localctx = new GlobalFunctionDeclarationContext(this, localctx);
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 32;
				this.match(LambdaParser.ID);
				this.state = 33;
				this.match(LambdaParser.EQ);
				this.state = 34;
				this.term(0);
				this.state = 35;
				this.match(LambdaParser.COLON);
				this.state = 36;
				this.type_(0);
				this.state = 37;
				this.match(LambdaParser.SEMI);
				}
				break;
			case 3:
				localctx = new TypeAliasDeclarationContext(this, localctx);
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 39;
				this.match(LambdaParser.TYPEDEF);
				this.state = 40;
				this.match(LambdaParser.ID);
				this.state = 41;
				this.match(LambdaParser.EQ);
				this.state = 42;
				this.type_(0);
				this.state = 43;
				this.match(LambdaParser.SEMI);
				}
				break;
			case 4:
				localctx = new TypeConstructorDeclarationContext(this, localctx);
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 45;
				this.match(LambdaParser.TYPEDEF);
				this.state = 46;
				this.match(LambdaParser.ID);
				this.state = 47;
				this.match(LambdaParser.COLON);
				this.state = 48;
				this.kind(0);
				this.state = 49;
				this.match(LambdaParser.SEMI);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}

	public term(): TermContext;
	public term(_p: number): TermContext;
	// @RuleVersion(0)
	public term(_p?: number): TermContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let localctx: TermContext = new TermContext(this, this._ctx, _parentState);
		let _prevctx: TermContext = localctx;
		let _startState: number = 4;
		this.enterRecursionRule(localctx, 4, LambdaParser.RULE_term, _p);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 241;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 9, this._ctx) ) {
			case 1:
				{
				localctx = new DummyAbstractionContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;

				this.state = 54;
				this.match(LambdaParser.LAMBDA);
				this.state = 55;
				this.match(LambdaParser.UNDERSCORE);
				this.state = 56;
				this.match(LambdaParser.COLON);
				this.state = 57;
				this.type_(0);
				this.state = 58;
				this.match(LambdaParser.DOT);
				this.state = 59;
				this.term(24);
				}
				break;
			case 2:
				{
				localctx = new LambdaAbstractionContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 61;
				this.match(LambdaParser.LAMBDA);
				this.state = 62;
				this.match(LambdaParser.ID);
				this.state = 63;
				this.match(LambdaParser.COLON);
				this.state = 64;
				this.type_(0);
				this.state = 65;
				this.match(LambdaParser.DOT);
				this.state = 66;
				this.term(23);
				}
				break;
			case 3:
				{
				localctx = new LambdaAbstractionUntypedContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 68;
				this.match(LambdaParser.LAMBDA);
				this.state = 69;
				this.match(LambdaParser.ID);
				this.state = 70;
				this.match(LambdaParser.DOT);
				this.state = 71;
				this.term(22);
				}
				break;
			case 4:
				{
				localctx = new TypeAbstractionContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 72;
				this.match(LambdaParser.LAMBDA_CAPITALIZED);
				this.state = 73;
				this.typeVariable();
				this.state = 74;
				this.match(LambdaParser.DOT);
				this.state = 75;
				this.term(21);
				}
				break;
			case 5:
				{
				localctx = new LetExpressionContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 77;
				this.match(LambdaParser.LET);
				this.state = 78;
				this.match(LambdaParser.ID);
				this.state = 79;
				this.match(LambdaParser.EQ);
				this.state = 80;
				this.term(0);
				this.state = 81;
				this.match(LambdaParser.IN);
				this.state = 82;
				this.term(20);
				}
				break;
			case 6:
				{
				localctx = new IfConditionContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 84;
				this.match(LambdaParser.IF);
				this.state = 85;
				this.term(0);
				this.state = 86;
				this.match(LambdaParser.THEN);
				this.state = 87;
				this.term(0);
				this.state = 95;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 3, this._ctx);
				while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
					if (_alt === 1) {
						{
						{
						this.state = 88;
						this.match(LambdaParser.ELSEIF);
						this.state = 89;
						this.term(0);
						this.state = 90;
						this.match(LambdaParser.THEN);
						this.state = 91;
						this.term(0);
						}
						}
					}
					this.state = 97;
					this._errHandler.sync(this);
					_alt = this._interp.adaptivePredict(this._input, 3, this._ctx);
				}
				this.state = 100;
				this._errHandler.sync(this);
				switch ( this._interp.adaptivePredict(this._input, 4, this._ctx) ) {
				case 1:
					{
					this.state = 98;
					this.match(LambdaParser.ELSE);
					this.state = 99;
					this.term(0);
					}
					break;
				}
				}
				break;
			case 7:
				{
				localctx = new CaseContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 102;
				this.match(LambdaParser.CASE);
				this.state = 103;
				this.term(0);
				this.state = 104;
				this.match(LambdaParser.OR);
				this.state = 105;
				this.match(LambdaParser.INL);
				this.state = 106;
				this.match(LambdaParser.ID);
				this.state = 107;
				this.match(LambdaParser.DOUBLEARROW);
				this.state = 108;
				this.term(0);
				this.state = 109;
				this.match(LambdaParser.OR);
				this.state = 110;
				this.match(LambdaParser.INR);
				this.state = 111;
				this.match(LambdaParser.ID);
				this.state = 112;
				this.match(LambdaParser.DOUBLEARROW);
				this.state = 113;
				this.term(18);
				}
				break;
			case 8:
				{
				localctx = new VariantCaseContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 115;
				this.match(LambdaParser.CASE);
				this.state = 116;
				this.term(0);
				this.state = 117;
				this.match(LambdaParser.OF);
				this.state = 118;
				this.match(LambdaParser.LBRACK);
				this.state = 119;
				this.match(LambdaParser.ID);
				this.state = 120;
				this.match(LambdaParser.EQ);
				this.state = 121;
				this.match(LambdaParser.ID);
				this.state = 122;
				this.match(LambdaParser.RBRACK);
				this.state = 123;
				this.match(LambdaParser.DOUBLEARROW);
				this.state = 124;
				this.term(0);
				this.state = 135;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 5, this._ctx);
				while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
					if (_alt === 1) {
						{
						{
						this.state = 125;
						this.match(LambdaParser.OR);
						this.state = 126;
						this.match(LambdaParser.LBRACK);
						this.state = 127;
						this.match(LambdaParser.ID);
						this.state = 128;
						this.match(LambdaParser.EQ);
						this.state = 129;
						this.match(LambdaParser.ID);
						this.state = 130;
						this.match(LambdaParser.RBRACK);
						this.state = 131;
						this.match(LambdaParser.DOUBLEARROW);
						this.state = 132;
						this.term(0);
						}
						}
					}
					this.state = 137;
					this._errHandler.sync(this);
					_alt = this._interp.adaptivePredict(this._input, 5, this._ctx);
				}
				}
				break;
			case 9:
				{
				localctx = new InlContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 138;
				this.match(LambdaParser.INL);
				this.state = 139;
				this.term(0);
				this.state = 140;
				this.match(LambdaParser.AS);
				this.state = 141;
				this.type_(0);
				}
				break;
			case 10:
				{
				localctx = new InrContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 143;
				this.match(LambdaParser.INR);
				this.state = 144;
				this.term(0);
				this.state = 145;
				this.match(LambdaParser.AS);
				this.state = 146;
				this.type_(0);
				}
				break;
			case 11:
				{
				localctx = new FixContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 148;
				this.match(LambdaParser.FIX);
				this.state = 149;
				this.term(14);
				}
				break;
			case 12:
				{
				localctx = new NilContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 150;
				this.match(LambdaParser.NIL);
				this.state = 151;
				this.match(LambdaParser.LBRACK);
				this.state = 152;
				this.type_(0);
				this.state = 153;
				this.match(LambdaParser.RBRACK);
				}
				break;
			case 13:
				{
				localctx = new ConsContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 155;
				this.match(LambdaParser.CONS);
				this.state = 156;
				this.match(LambdaParser.LBRACK);
				this.state = 157;
				this.type_(0);
				this.state = 158;
				this.match(LambdaParser.RBRACK);
				this.state = 159;
				this.term(0);
				this.state = 160;
				this.term(12);
				}
				break;
			case 14:
				{
				localctx = new IsNilContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 162;
				this.match(LambdaParser.ISNIL);
				this.state = 163;
				this.match(LambdaParser.LBRACK);
				this.state = 164;
				this.type_(0);
				this.state = 165;
				this.match(LambdaParser.RBRACK);
				this.state = 166;
				this.term(11);
				}
				break;
			case 15:
				{
				localctx = new HeadContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 168;
				this.match(LambdaParser.HEAD);
				this.state = 169;
				this.match(LambdaParser.LBRACK);
				this.state = 170;
				this.type_(0);
				this.state = 171;
				this.match(LambdaParser.RBRACK);
				this.state = 172;
				this.term(10);
				}
				break;
			case 16:
				{
				localctx = new TailContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 174;
				this.match(LambdaParser.TAIL);
				this.state = 175;
				this.match(LambdaParser.LBRACK);
				this.state = 176;
				this.type_(0);
				this.state = 177;
				this.match(LambdaParser.RBRACK);
				this.state = 178;
				this.term(9);
				}
				break;
			case 17:
				{
				localctx = new FoldContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 180;
				this.match(LambdaParser.FOLD);
				this.state = 181;
				this.match(LambdaParser.LBRACK);
				this.state = 182;
				this.type_(0);
				this.state = 183;
				this.match(LambdaParser.RBRACK);
				this.state = 184;
				this.term(8);
				}
				break;
			case 18:
				{
				localctx = new UnfoldContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 186;
				this.match(LambdaParser.UNFOLD);
				this.state = 187;
				this.match(LambdaParser.LBRACK);
				this.state = 188;
				this.type_(0);
				this.state = 189;
				this.match(LambdaParser.RBRACK);
				this.state = 190;
				this.term(7);
				}
				break;
			case 19:
				{
				localctx = new RecordContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 192;
				this.match(LambdaParser.LT);
				this.state = 193;
				this.match(LambdaParser.ID);
				this.state = 194;
				this.match(LambdaParser.EQ);
				this.state = 195;
				this.term(0);
				this.state = 202;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===55) {
					{
					{
					this.state = 196;
					this.match(LambdaParser.COMMA);
					this.state = 197;
					this.match(LambdaParser.ID);
					this.state = 198;
					this.match(LambdaParser.EQ);
					this.state = 199;
					this.term(0);
					}
					}
					this.state = 204;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 205;
				this.match(LambdaParser.MT);
				}
				break;
			case 20:
				{
				localctx = new TupleContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 207;
				this.match(LambdaParser.LT);
				this.state = 208;
				this.term(0);
				this.state = 213;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===55) {
					{
					{
					this.state = 209;
					this.match(LambdaParser.COMMA);
					this.state = 210;
					this.term(0);
					}
					}
					this.state = 215;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 216;
				this.match(LambdaParser.MT);
				}
				break;
			case 21:
				{
				localctx = new VariantContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 218;
				this.match(LambdaParser.LBRACK);
				this.state = 219;
				this.match(LambdaParser.ID);
				this.state = 220;
				this.match(LambdaParser.EQ);
				this.state = 221;
				this.term(0);
				this.state = 228;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===55) {
					{
					{
					this.state = 222;
					this.match(LambdaParser.COMMA);
					this.state = 223;
					this.match(LambdaParser.ID);
					this.state = 224;
					this.match(LambdaParser.EQ);
					this.state = 225;
					this.term(0);
					}
					}
					this.state = 230;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 231;
				this.match(LambdaParser.RBRACK);
				this.state = 232;
				this.match(LambdaParser.AS);
				this.state = 233;
				this.type_(0);
				}
				break;
			case 22:
				{
				localctx = new VariableContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 235;
				this.match(LambdaParser.ID);
				}
				break;
			case 23:
				{
				localctx = new ParenthesesContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 236;
				this.match(LambdaParser.LPAREN);
				this.state = 237;
				this.term(0);
				this.state = 238;
				this.match(LambdaParser.RPAREN);
				}
				break;
			case 24:
				{
				localctx = new LiteralContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 240;
				this.constant();
				}
				break;
			}
			this._ctx.stop = this._input.LT(-1);
			this.state = 267;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 11, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = localctx;
					{
					this.state = 265;
					this._errHandler.sync(this);
					switch ( this._interp.adaptivePredict(this._input, 10, this._ctx) ) {
					case 1:
						{
						localctx = new ApplicationContext(this, new TermContext(this, _parentctx, _parentState));
						this.pushNewRecursionContext(localctx, _startState, LambdaParser.RULE_term);
						this.state = 243;
						if (!(this.precpred(this._ctx, 29))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 29)");
						}
						this.state = 244;
						this.term(30);
						}
						break;
					case 2:
						{
						localctx = new BinaryOpContext(this, new TermContext(this, _parentctx, _parentState));
						this.pushNewRecursionContext(localctx, _startState, LambdaParser.RULE_term);
						this.state = 245;
						if (!(this.precpred(this._ctx, 27))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 27)");
						}
						this.state = 246;
						(localctx as BinaryOpContext)._op = this._input.LT(1);
						_la = this._input.LA(1);
						if(!(((((_la - 40)) & ~0x1F) === 0 && ((1 << (_la - 40)) & 2031) !== 0))) {
						    (localctx as BinaryOpContext)._op = this._errHandler.recoverInline(this);
						}
						else {
							this._errHandler.reportMatch(this);
						    this.consume();
						}
						this.state = 247;
						this.term(28);
						}
						break;
					case 3:
						{
						localctx = new SequencingContext(this, new TermContext(this, _parentctx, _parentState));
						this.pushNewRecursionContext(localctx, _startState, LambdaParser.RULE_term);
						this.state = 248;
						if (!(this.precpred(this._ctx, 25))) {
